# truepeak

./: .gitignore  GEMINI.md  README.md  deploy.sh  vercel.json
.agents/workflows/: truepeak.md
.atl/: skill-registry.md
backend/: .env.example  Dockerfile  migrate_phase1.py  pyproject.toml
backend-dev/: .env.example  Dockerfile  check_plan.py  create_test_user.py  init_local_db.py  set_indie.py
backend-dev/app/: cleanup_cron.py  main.py
backend-dev/app/api/: labels.py  upload.py
backend-dev/app/audio/: analyzer.py  converter.py  exceptions.py  lifecycle.py
backend-dev/app/services/: auth.py
backend/app/: cleanup_cron.py  database.py  main.py  models.py
backend/app/api/: email.py  health.py  labels.py  polar_webhook.py  submissions.py  upload.py
backend/app/audio/: __init__.py  analyzer.py  converter.py  lifecycle.py
backend/app/services/: auth.py  email_service.py  llm_email.py
frontend/: .env.example  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/config/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/refund-policy/: page.tsx
frontend/app/success/: page.tsx
frontend/app/terms-of-service/: page.tsx
frontend/components/: HoldToDelete.tsx  TwoClickDelete.tsx  WhatsAppBubble.tsx
frontend/components/audio-viz/: demo-simulation.tsx  spectrum-bars.tsx  waveform.tsx
frontend/components/dashboard/: audio-player.tsx  submission-card.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx  toast.tsx
frontend/lib/: PlayerContext.tsx  api.ts  i18n.tsx  store.ts  theme.tsx  useUndoableState.ts
infra/: docker-compose.yml
scratch/: fix_routes.py
(+9 files in other folders)
